# arbitest

./: Arbitest.toml  Cargo.toml  atest
src/: atest.rs  exec.rs  main.rs  parser.rs  test.rs
test/: test1.atest  test1.toml  test_inv.sh  test_inv2.sh
