[package]
name = "arbitest"
version = "0.1.0"
description = "Arbitrary test executor"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils"]
repository = "https://github.com/TheOnlyMrCat/arbitest"
authors = ["TheOnlyMrCat <skylifegame@gmail.com>"]
edition = "2018"

[profile.release]
panic = "abort"

[[bin]]
name = "atest"
path = "src/main.rs"

[dependencies]
termcolor = "1.1.2"
runscript = { version = "1.3.1", path = "../Runscript" }
